--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CPS4005
 endorsed.classpath=
 excludes=
+file.reference.jdatepicker-1.3.4.jar=..\\..\\..\\..\\Downloads\\mysql-connector-java.jar\\jdatepicker-1.3.4.jar
 file.reference.slf4j-api-2.0.13.jar=../../../../Downloads/mysql-connector-java.jar/slf4j-api-2.0.13.jar
 file.reference.sqlite-jdbc-3.45.1.0.jar=..\\..\\..\\..\\Downloads\\mysql-connector-java.jar\\sqlite-jdbc-3.45.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.45.1.0.jar}
+    ${file.reference.sqlite-jdbc-3.45.1.0.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
